@@ -1,3 +1,8 @@
+2008-12-05  Naohiro Aota  <nao.aota@gmail.com>
+
+	* w3m.el (w3m-local-find-file-regexps): Try to open with emacs-w3m as
+	many types as possible.
+
 2008-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-fontify): Remove hidden anchors like "<a href=url> </a>".
